cmake_minimum_required(VERSION 3.3)
project(turbovax)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    src/PDP11/pdp11_cr.cpp
    src/PDP11/pdp11_cr_dat.h
    src/PDP11/pdp11_dz.cpp
    src/PDP11/pdp11_io_lib.cpp
    src/PDP11/pdp11_io_lib.h
    src/PDP11/pdp11_lp.cpp
    src/PDP11/pdp11_mscp.h
    src/PDP11/pdp11_rl.cpp
    src/PDP11/pdp11_rq.cpp
    src/PDP11/pdp11_ry.cpp
    src/PDP11/pdp11_tq.cpp
    src/PDP11/pdp11_ts.cpp
    src/PDP11/pdp11_uqssp.h
    src/PDP11/pdp11_vh.cpp
    src/PDP11/pdp11_xq.cpp
    src/PDP11/pdp11_xq.h
    src/PDP11/pdp11_xq_bootrom.h
    src/VAX/vax_cis.cpp
    src/VAX/vax_cmode.cpp
    src/VAX/vax_cpu.cpp
    src/VAX/vax_cpu.h
    src/VAX/vax_cpu1.cpp
    src/VAX/vax_cpuctx.h
    src/VAX/vax_defs.h
    src/VAX/vax_fpa.cpp
    src/VAX/vax_hist.h
    src/VAX/vax_io.cpp
    src/VAX/vax_ka655x_bin.h
    src/VAX/vax_mmu.cpp
    src/VAX/vax_mmu.h
    src/VAX/vax_octa.cpp
    src/VAX/vax_stddev.cpp
    src/VAX/vax_sys.cpp
    src/VAX/vax_syscm.cpp
    src/VAX/vax_sysdev.cpp
    src/VAX/vax_syslist.cpp
    src/VAX/vaxmod_defs.h
    src/VMS_STRESS/CC/hw.c
    src/VMS_STRESS/FILE/file.c
    src/VMS_STRESS/NUMTIM/numtim.c
    src/VMS_STRESS/PAGE/page.c
    src/VMS_VSMP/vsmp.c
    src/scp.cpp
    src/scp.h
    src/sim_aio.cpp
    src/sim_barriers.cpp
    src/sim_console.cpp
    src/sim_console.h
    src/sim_defs.h
    src/sim_disk.cpp
    src/sim_disk.h
    src/sim_ether.cpp
    src/sim_ether.h
    src/sim_fio.cpp
    src/sim_fio.h
    src/sim_rev.h
    src/sim_smp_file.cpp
    src/sim_sock.cpp
    src/sim_sock.h
    src/sim_syncw.cpp
    src/sim_syncw.h
    src/sim_tape.cpp
    src/sim_tape.h
    src/sim_threads.cpp
    src/sim_threads.h
    src/sim_threads2.h
    src/sim_timer.cpp
    src/sim_timer.h
    src/sim_tmxr.cpp
    src/sim_tmxr.h
    src/sim_try.cpp
    src/sim_try.h
    src/sim_util.cpp
    src/sim_util.h)

add_executable(turbovax ${SOURCE_FILES})